experiment_output/error_log/nondex-onlythinking-micro-starter:users-query-service.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task648/wd/NonDex-plugin-test/github.com/onlythinking/micro-starter/users-api/src/main/java/com/believe/api/users/event/UsersCreatedEvent.java:16: error: variable id not initialized in the default constructor
  private final UsersId id;
                        ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task648/wd/NonDex-plugin-test/github.com/onlythinking/micro-starter/users-api/src/main/java/com/believe/api/users/event/UsersCreatedEvent.java:17: error: variable username not initialized in the default constructor
  private final String username;
                       ^
2 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':users-api:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 5m 7s
